# FractalCreator

./: CMakeLists.txt
src/: main.cpp
src/Bitmap/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h
src/Fractal/: FractalCreator.cpp  FractalCreator.h
src/Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h
src/RGB/: RGB.cpp  RGB.h
src/Zoom/: Zoom.h  ZoomList.cpp  ZoomList.h
